--- a/multimedia/totem/Makefile.common
+++ b/multimedia/totem/Makefile.common
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile.common,v 1.8 2005/08/10 20:56:21 jlam Exp $
+# $NetBSD: Makefile.common,v 1.9 2005/08/21 11:34:03 jmmv Exp $
 #
 
-DISTNAME=	totem-1.0.2
+DISTNAME=	totem-1.0.4
 CATEGORIES=	multimedia gnome
 MASTER_SITES=	${MASTER_SITE_GNOME:=sources/totem/1.0/}
 
