--- a/mail/evolution/Makefile
+++ b/mail/evolution/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.87 2005/08/10 20:56:19 jlam Exp $
+# $NetBSD: Makefile,v 1.88 2005/08/21 11:34:37 jmmv Exp $
 
-DISTNAME=		evolution-2.2.2
-PKGREVISION=		1
+DISTNAME=		evolution-2.2.3
 CATEGORIES=		mail time gnome
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/evolution/2.2/}
 EXTRACT_SUFX=		.tar.bz2
@@ -100,11 +99,11 @@ GCONF2_SCHEMAS+=	evolution-mail-2.2.schemas
 BUILDLINK_TRANSFORM+=	rm:-DG_DISABLE_DEPRECATED
 BUILDLINK_TRANSFORM+=	rm:-DGTK_DISABLE_DEPRECATED
 
-BUILDLINK_DEPENDS.evolution-data-server+=	evolution-data-server>=1.2.2
-BUILDLINK_DEPENDS.gal2+=	gal2>=2.4.2
+BUILDLINK_DEPENDS.evolution-data-server+=	evolution-data-server>=1.2.3
+BUILDLINK_DEPENDS.gal2+=	gal2>=2.4.3
 BUILDLINK_DEPENDS.glib2+=	glib2>=2.4.0nb2
 BUILDLINK_DEPENDS.gtkhtml36+=	gtkhtml36>=3.6.2
-BUILDLINK_DEPENDS.libsoup-devel+=		libsoup-devel>=2.2.1
+BUILDLINK_DEPENDS.libsoup-devel+=		libsoup-devel>=2.2.3
 
 .if !exists(/usr/include/semaphore.h)
 LDFLAGS+=	-lsemaphore
