--- a/databases/ruby-DBI/Makefile
+++ b/databases/ruby-DBI/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2006/03/09 14:50:31 ghen Exp $
+# $NetBSD: Makefile,v 1.14 2006/03/11 10:07:49 ghen Exp $
 
 DISTNAME=	ruby-dbi-all-${RUBY_DBI_VERSION}
 PKGNAME=	${RUBY_PKGPREFIX}-DBI-${RUBY_DBI_VERSION}
@@ -23,9 +23,9 @@ TESTS=		README testdbi.rb example/config.sh example/example.cfg \
 		example/setup.sh example/teardown.sh
 
 REPLACE_INTERPRETER+=	bash
-_REPLACE.bash.old=	.*/bin/bash
-_REPLACE.bash.new=	${SH:Q}
-_REPLACE_FILES.bash=	test/example/teardown.sh
+REPLACE.bash.old=	.*/bin/bash
+REPLACE.bash.new=	${SH}
+REPLACE_FILES.bash=	test/example/teardown.sh
 
 post-install:
 	${INSTALL_DATA_DIR} ${RUBY_DOCDIR}/dbi/html
