--- a/devel/bmake/files/Makefile.in
+++ b/devel/bmake/files/Makefile.in
@@ -1,7 +1,7 @@
-#	$NetBSD: Makefile.in,v 1.2 2005/11/10 00:09:34 reed Exp $
+#	$NetBSD: Makefile.in,v 1.3 2007/05/23 04:21:05 schmonz Exp $
 #	@(#)Makefile	5.2 (Berkeley) 12/28/90
 
-#	$Id: Makefile.in,v 1.2 2005/11/10 00:09:34 reed Exp $
+#	$Id: Makefile.in,v 1.3 2007/05/23 04:21:05 schmonz Exp $
 
 PROG=	bmake
 SRCS=	arch.c buf.c compat.c cond.c dir.c for.c hash.c job.c main.c \
@@ -29,6 +29,7 @@ MAKE_VERSION:= bmake-${BMAKE_VERSION} build-${BUILD_DATE}
 MACHINE=@machine@
 MACHINE_ARCH=@machine_arch@
 
+CFLAGS?= @CFLAGS@
 CFLAGS+= -D_PATH_DEFSYSPATH=\"@default_sys_path@\"
 CFLAGS+= -I. -I${srcdir} @DEFS@ @CPPFLAGS@ ${XDEFS} -DMAKE_NATIVE
 CFLAGS+= ${CFLAGS_${.TARGET:T}} 
