--- a/bootstrap/macpkg.pmproj.in
+++ b/bootstrap/macpkg.pmproj.in
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- $NetBSD: macpkg.pmproj.in,v 1.1 2007/05/22 17:43:33 schmonz Exp $ -->
+<!-- $NetBSD: macpkg.pmproj.in,v 1.2 2007/05/23 05:00:40 schmonz Exp $ -->
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
@@ -548,11 +548,11 @@
 			<integer>0</integer>
 		</dict>
 		<string>/</string>
-		<string>20070522, The NetBSD Foundation</string>
+		<string>%DATE%, The NetBSD Foundation</string>
 		<integer>1</integer>
 		<string>org.pkgsrc.bootstrap</string>
 		<integer>0</integer>
-		<string>20070522</string>
+		<string>%DATE%</string>
 		<dict>
 			<key>$class</key>
 			<dict>
