--- a/sysutils/k3b/Makefile
+++ b/sysutils/k3b/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.19 2007/05/05 21:36:07 markd Exp $
+# $NetBSD: Makefile,v 1.20 2007/05/23 12:38:23 markd Exp $
 #
 
 DISTNAME=		k3b-1.0.1
+PKGREVISION=		1
 CATEGORIES=		sysutils
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=k3b/}
 EXTRACT_SUFX=		.tar.bz2
