--- a/misc/kdeutils3/Makefile
+++ b/misc/kdeutils3/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.58 2007/01/26 03:19:22 markd Exp $
+# $NetBSD: Makefile,v 1.59 2007/05/23 13:19:23 markd Exp $
 
 DISTNAME=	kdeutils-${_KDE_VERSION}
 COMMENT=	Utilities for the KDE integrated X11 desktop
@@ -36,5 +36,6 @@ CONFIGURE_ENV+=		PYVERSSUFFIX=${PYVERSSUFFIX:Q}
 .include "../../lang/python/application.mk"
 .include "../../x11/kdebase3/buildlink3.mk"
 .include "../../x11/kdelibs3/buildlink3.mk"
+.include "../../x11/libXScrnSaver/buildlink3.mk"
 .include "../../x11/libXtst/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
