--- a/misc/kdeaccessibility3/Makefile
+++ b/misc/kdeaccessibility3/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.27 2007/03/21 12:05:50 wiz Exp $
+# $NetBSD: Makefile,v 1.28 2007/05/23 13:35:15 markd Exp $
 
 DISTNAME=	kdeaccessibility-${_KDE_VERSION}
-PKGREVISION=	1
 CATEGORIES=	misc
 COMMENT=	Accessibility support for the KDE integrated X11 desktop
 
