--- a/devel/m4/Makefile
+++ b/devel/m4/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.46 2007/04/08 18:04:22 wiz Exp $
+# $NetBSD: Makefile,v 1.47 2007/05/24 21:51:47 dmcmahill Exp $
 
 DISTNAME=	m4-1.4.9
+PKGREVISION=	1
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_GNU:=m4/}
 
