--- a/www/p5-HTML-FillInForm/Makefile
+++ b/www/p5-HTML-FillInForm/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.17 2006/03/04 21:31:01 jlam Exp $
+# $NetBSD: Makefile,v 1.18 2007/05/25 11:20:29 markd Exp $
 
-DISTNAME=	HTML-FillInForm-1.04
+DISTNAME=	HTML-FillInForm-1.06
 PKGNAME=	p5-${DISTNAME}
 SVR4_PKGNAME=	p5hfi
-PKGREVISION=	2
 CATEGORIES=	www perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=HTML/}
 
