--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.400 2007/05/20 15:48:07 wiz Exp $
+# $NetBSD: Makefile,v 1.401 2007/05/25 19:31:26 agc Exp $
 #
 
 COMMENT=	System utilities
@@ -120,6 +120,7 @@ SUBDIR+=	gworkspace
 SUBDIR+=	hcidump
 SUBDIR+=	hddtemp
 SUBDIR+=	hfsutils
+SUBDIR+=	htop
 SUBDIR+=	i2ocfg
 SUBDIR+=	i810switch
 SUBDIR+=	idesk
