--- a/mail/Pantomime/Makefile
+++ b/mail/Pantomime/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.19 2006/09/22 07:08:16 rillig Exp $
+# $NetBSD: Makefile,v 1.20 2007/05/25 23:37:10 rh Exp $
 #
 
 DISTNAME=	Pantomime-1.1.2
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	mail gnustep
 MASTER_SITES=	http://debian.uni-essen.de/misc/GNUstep/Apps/GNUMail/
 
