--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.363 2007/05/24 10:50:34 minskim Exp $
+# $NetBSD: Makefile,v 1.364 2007/05/26 00:59:50 minskim Exp $
 #
 
 COMMENT=	Text processing utilities (does not include desktop publishing)
@@ -351,6 +351,7 @@ SUBDIR+=	xerces-c
 SUBDIR+=	xerces-j
 SUBDIR+=	xfce4-dict-plugin
 SUBDIR+=	xhtml
+SUBDIR+=	xhtmldiff
 SUBDIR+=	xml2doc
 SUBDIR+=	xmlcatmgr
 SUBDIR+=	xmlindent
