--- a/meta-pkgs/ruby-gnome2/Makefile
+++ b/meta-pkgs/ruby-gnome2/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.4 2007/01/29 06:42:34 minskim Exp $
+# $NetBSD: Makefile,v 1.5 2007/05/26 06:39:26 obache Exp $
 #
 
 PKGNAME=	${RUBY_PKGPREFIX}-gnome2-${VERSION}
+PKGREVISION=	1
 COMMENT=	Set of Ruby language bindings for GNOME2
 DISTFILES=	# empty
 CATEGORIES=	meta-pkgs gnome
@@ -11,10 +12,12 @@ DEPENDS+=	${RUBY_PKGPREFIX}-gnome2-gdkpixbuf>=${VERSION}:../../graphics/ruby-gno
 DEPENDS+=	${RUBY_PKGPREFIX}-gnome2-glib>=${VERSION}:../../devel/ruby-gnome2-glib
 DEPENDS+=	${RUBY_PKGPREFIX}-gnome2-gnome>=${VERSION}:../../x11/ruby-gnome2-gnome
 DEPENDS+=	${RUBY_PKGPREFIX}-gnome2-gnomecanvas>=${VERSION}:../../graphics/ruby-gnome2-gnomecanvas
+DEPENDS+=	${RUBY_PKGPREFIX}-gnome2-gnomeprint>=${VERSION}:../../print/ruby-gnome2-gnomecanvas
 DEPENDS+=	${RUBY_PKGPREFIX}-gnome2-gtk>=${VERSION}:../../x11/ruby-gnome2-gtk
 DEPENDS+=	${RUBY_PKGPREFIX}-gnome2-libart>=${VERSION}:../../graphics/ruby-gnome2-libart
 DEPENDS+=	${RUBY_PKGPREFIX}-gnome2-panelapplet>=${VERSION}:../../x11/ruby-gnome2-panelapplet
 DEPENDS+=	${RUBY_PKGPREFIX}-gnome2-pango>=${VERSION}:../../devel/ruby-gnome2-pango
+DEPENDS+=	${RUBY_PKGPREFIX}-gnome2-rsvg>=${VERSION}:../../graphics/ruby-gnome2-rsvg
 
 EXTRACT_ONLY=	# empty
 NO_CHECKSUM=	yes
