--- a/devel/ruby-gettext/Makefile
+++ b/devel/ruby-gettext/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.1.1.1 2007/05/26 06:21:30 obache Exp $
+# $NetBSD: Makefile,v 1.2 2007/05/26 12:10:25 obache Exp $
 
 DISTNAME=	ruby-gettext-package-1.9.0
-PKGNAME=	${RUBY_PKGPREFIX}-${DISTNAME:S/-package//}
+PKGNAME=	${RUBY_PKGPREFIX}-${DISTNAME:C/ruby-(.*)-package/\1/}
 CATEGORIES=	devel ruby
 MASTER_SITES=	http://rubyforge.org/frs/download.php/16681/
 
